--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
-  <link rel="stylesheet" href="gustavo.css">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXY5ehg2gH6EgcORxyBFYmjUhFgbss95A&libraries=places"></script>
+  <link rel="stylesheet" href="/style/gustavo.css">
+  <link rel="icon" href="https://openweathermap.org/img/wn/10d@2x.png">
+  <script>
+    (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+      key: "AIzaSyDXY5ehg2gH6EgcORxyBFYmjUhFgbss95A",
+      v: "weekly",
+    });
+  </script>
   <script src="https://kit.fontawesome.com/b14eafc455.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -28,13 +34,16 @@
     </div> -->
 
 
-      <h2 style="font-size:2.5rem;text-align: center;">5-Day Forecast</h2>
+      <h2 style="font-size:2.5rem;text-align: center;">5 - Day Forecast / 3 Hours Forecast</h2>
       <div id="forecast"></div>
+      <div id="hourlyForecast"></div>
+
     </section>
-  </div>
-  <script src="5daysForecast.js"></script>
-  <script src="3hoursForecast.js"></script>
-  <script src="currentWeather.js"></script>
-  <script src="handler.js"></script>
+</div>
+<script src="/script/searchBar.js"></script>
+  <script src="/script/currentWeather.js"></script>
+  <script src="/script/5daysForecast.js"></script>
+  <script src="/script/3hoursForecast.js"></script>
+  <script src="/script/handler.js"></script>
 </body>
 </html>
