--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <input id="latitude" type="hidden">
             <input id="longitude" type="hidden">
         </form>
+        <p>alo</p>
     </header>
 
 
